Add pro include

--- a/docs/_sass/bootstrap.sass
+++ b/docs/_sass/bootstrap.sass
@@ -15,3 +15,46 @@ $bootstrap-invert: #fff
       color: currentColor
       &:hover
         color: $bootstrap-invert
+
+.pros-heading
+  padding: 2rem
+  padding-bottom: 0
+  text-align: center
+
+.pros-icon
+  margin-bottom: 2rem
+  text-align: center
+  svg
+    height: 3rem
+    width: auto
+
+.pros-list
+  margin: 0 auto
+  max-width: 540px
+
+.pro
+  .icon
+    position: relative
+    top: -1px
+  .title
+    margin-bottom: 0.5rem
+
+.pro + .pro
+  margin-top: 2rem
+  padding-top: 2rem
+
+.pro-content
+  p:not(:last-child)
+    margin-bottom: 0.5rem
+
+.pro.is-bulma
+  .icon
+    color: $primary
+
+.pro.is-bootstrap
+  .icon
+    color: $bootstrap
+
+.separator
+  color: $border
+  margin: 0 0.25em
