--- a/docs/_sass/love.sass
+++ b/docs/_sass/love.sass
@@ -34,6 +34,18 @@
   .testimonial + .testimonial
     margin-top: 1.5rem
 
++desktop
+  .testimonials
+    min-height: 595px
+
++widescreen
+  .testimonials
+    min-height: 653px
+
++fullhd
+  .testimonials
+    min-height: 632px
+
 .rainbow
   animation: rainbow 8s ease infinite
   background-image: linear-gradient(124deg, $orange, $red, $purple, $blue)
