Add comparison table

--- a/docs/_sass/bootstrap.sass
+++ b/docs/_sass/bootstrap.sass
@@ -17,12 +17,11 @@ $bootstrap-invert: #fff
         color: $bootstrap-invert
 
 .pros-heading
-  padding: 2rem
-  padding-bottom: 0
+  padding: 0 2rem
   text-align: center
 
 .pros-icon
-  margin-bottom: 2rem
+  margin-bottom: 3rem
   text-align: center
   svg
     height: 3rem
@@ -58,3 +57,29 @@ $bootstrap-invert: #fff
 .separator
   color: $border
   margin: 0 0.25em
+
+.comparison
+  margin: 0 auto
+  max-width: 42rem
+  .table
+    svg
+      float: left
+      height: 1rem
+      margin-right: 0.5rem
+      margin-top: 0.25rem
+      width: auto
+    tbody
+      th[colspan]
+        font-size: 1.25em
+      a
+        color: $red
+        font-family: $family-monospace
+        &:hover
+          color: $text-strong
+          text-decoration: underline
+    .is-empty
+      background-color: $background
+      color: $text-light
+
+.comparison-header
+  margin-bottom: 3rem
