Add unique features

--- a/docs/_includes/comparison.html
+++ b/docs/_includes/comparison.html
@@ -29,7 +29,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/grid/tiles/">
       tile
     </a>
@@ -44,7 +44,7 @@
   </th>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/form/general/">
       field
     </a>
@@ -126,7 +126,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/form/select/">
       select
     </a>
@@ -160,7 +160,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/form/file/">
       file
     </a>
@@ -187,7 +187,7 @@
   </th>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/elements/box/">
       box
     </a>
@@ -209,7 +209,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/elements/content/">
       content
     </a>
@@ -354,7 +354,7 @@
   <td class="is-empty">
     –
   </td>
-  <td>
+  <td class="is-unique">
     <a href="http://getbootstrap.com/css/#type-lists" target="_blank">
       lists
     </a>
@@ -364,7 +364,7 @@
   <td class="is-empty">
     –
   </td>
-  <td>
+  <td class="is-unique">
     <a href="http://getbootstrap.com/css/#caret" target="_blank">
       caret
     </a>
@@ -388,7 +388,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/components/card/">
       card
     </a>
@@ -410,7 +410,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/components/level/">
       level
     </a>
@@ -423,7 +423,7 @@
   <td class="is-empty">
     –
   </td>
-  <td>
+  <td class="is-unique">
     <a href="http://getbootstrap.com/components/#list-group" target="_blank">
       list group
     </a>
@@ -442,7 +442,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/components/menu/">
       menu
     </a>
@@ -491,7 +491,7 @@
   <td class="is-empty">
     –
   </td>
-  <td>
+  <td class="is-unique">
     <a href="http://getbootstrap.com/components/#page-header" target="_blank">
       page header
     </a>
@@ -510,7 +510,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/components/panel/">
       panel
     </a>
@@ -535,7 +535,7 @@
   <td class="is-empty">
     –
   </td>
-  <td>
+  <td class="is-unique">
     <a href="http://getbootstrap.com/components/#wells" target="_blank">
       wells
     </a>
@@ -571,7 +571,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/layout/section/">
       section
     </a>
@@ -581,7 +581,7 @@
   </td>
 </tr>
 <tr>
-  <td>
+  <td class="is-unique">
     <a href="{{ site.url }}/documentation/layout/footer/">
       footer
     </a>
