--- a/docs/_sass/bootstrap.sass
+++ b/docs/_sass/bootstrap.sass
@@ -62,24 +62,36 @@ $bootstrap-invert: #fff
   margin: 0 auto
   max-width: 42rem
   .table
-    svg
-      float: left
-      height: 1rem
-      margin-right: 0.5rem
-      margin-top: 0.25rem
-      width: auto
+    color: $red
+    thead,
+    tfoot
+      th
+        font-size: 1.5rem
+        text-align: center
+      svg
+        height: 1.5rem
+        margin-right: 1rem
+        position: relative
+        top: 0.25rem
+        width: auto
     tbody
-      th[colspan]
-        font-size: 1.25em
-      a
-        color: $red
+      th
+        font-size: 1.25rem
+        text-align: center
+      td
         font-family: $family-monospace
+        width: 50%
+      a
+        color: currentColor
         &:hover
-          color: $text-strong
           text-decoration: underline
     .is-empty
       background-color: $background
       color: $text-light
+    .is-unique
+      background-color: rgba($green, 0.25)
+      color: $text-strong
+      font-weight: $weight-bold
 
 .comparison-header
   margin-bottom: 3rem
