--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -1,31 +1,33 @@
 .block
   +block
 
+$container-offset: 60px !default
+
 .container
   margin: 0 auto
   position: relative
-  +desktop
+  +from($desktop + $container-offset)
     max-width: $desktop - (2 * $gap)
-    // width: $desktop - (2 * $gap)
+    width: $desktop - (2 * $gap)
     &.is-fluid
       margin-left: $gap
       margin-right: $gap
       max-width: none
-      // width: auto
-  +until($widescreen)
+      width: auto
+  +until($widescreen + $container-offset)
     &.is-widescreen
       max-width: $widescreen - (2 * $gap)
-      // width: auto
-  +until($fullhd)
+      width: auto
+  +until($fullhd + $container-offset)
     &.is-fullhd
       max-width: $fullhd - (2 * $gap)
-      // width: auto
-  +widescreen
+      width: auto
+  +from($widescreen + $container-offset)
     max-width: $widescreen - (2 * $gap)
-    // width: $widescreen - (2 * $gap)
-  +fullhd
+    width: $widescreen - (2 * $gap)
+  +from($fullhd + $container-offset)
     max-width: $fullhd - (2 * $gap)
-    // width: $fullhd - (2 * $gap)
+    width: $fullhd - (2 * $gap)
 
 .delete
   +delete
