Add Bootstrap comparison

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -5,7 +5,7 @@ route: blog
 
 {% include blog-hero.html %}
 
-<section class="section">
+<section class="section is-medium">
   <div class="container">
     <div class="columns">
       <div class="column is-offset-2 is-8">
@@ -21,7 +21,7 @@ route: blog
           </strong>
         </div>
         <p class="subtitle is-6">
-          <a class="article-back href="{{ site.url }}/blog">Back</a>
+          <a class="article-back" href="{{ site.url }}/blog">Back</a>
         </p>
         <p class="subtitle is-4">
           {{ page.date | date_to_string }}
