--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -60,6 +60,8 @@
     $color: nth($pair, 1)
     &.is-#{$name}
       background-color: $color
+  &.is-bootstrap
+    background-color: $bootstrap
   &:hover
     .article-overlay
       opacity: 0.25
