This seemed to fix my issue that the burger show up when it wasent neccessary

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -395,13 +395,13 @@ variables:
 {% endcapture %}
 
 {% capture navbar_js_html %}
-<div class="navbar-burger" data-target="navMenu">
+<div class="nav-toggle" data-target="navMenu">
   <span></span>
   <span></span>
   <span></span>
 </div>
 
-<div class="navbar-menu" id="navMenu">
+<div class="nav-right nav-menu" id="navMenu">
   <!-- navbar-start, navbar-end... -->
 </div>
 {% endcapture %}
@@ -410,7 +410,7 @@ variables:
 document.addEventListener('DOMContentLoaded', function () {
 
   // Get all "navbar-burger" elements
-  var $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+  var $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.nav-toggle'), 0);
 
   // Check if there are any nav burgers
   if ($navbarBurgers.length > 0) {
