Fixed bug with textareas

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -75,11 +75,11 @@ $input-radius:              $radius !default
   min-width: 100%
   padding: 0.625em
   resize: vertical
-  &:not([rows])
-    max-height: 600px
-    min-height: 120px
-  &[rows]
-    height: unset
+  // &:not([rows])
+    // max-height: 600px
+    // min-height: 120px
+  // &[rows]
+    // height: unset
 
 .checkbox,
 .radio
