--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -171,6 +171,18 @@
     &:#{$placeholder}-placeholder
       @content
 
+=sticky($position, $opacity: 0.95)
+  border-radius: 0
+  opacity: $opacity
+  width: 100%
+  @if $position == top
+    border-bottom: 1px solid rgba($black, 0.2)
+  @if $position == bottom
+    border-top: 1px solid rgba($black, 0.2)
+    bottom: 0
+    position: fixed
+    z-index: 1000
+
 =unselectable
   -webkit-touch-callout: none
   -webkit-user-select: none
