--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -1,4 +1,5 @@
 $notification-background-color: $background !default
+$notification-background-opacity: 0.95 !default
 $notification-radius: $radius !default
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 
@@ -33,3 +34,8 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     &.is-#{$name}
       background-color: $color
       color: $color-invert
+  // Modifiers
+  &.is-sticky-top
+    +sticky(top, $notification-background-opacity)
+  &.is-sticky-bottom
+    +sticky(bottom, $notification-background-opacity)
