add responsive helpers to text-align helpers

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -46,12 +46,66 @@
 
 .has-text-centered
   text-align: center !important
++mobile
+  .has-text-centered-mobile
+    text-align: center !important
++tablet
+  .has-text-centered-tablet
+    text-align: center !important
++touch
+  .has-text-centered-touch
+    text-align: center !important
++desktop
+  .has-text-centered-desktop
+    text-align: center !important
++widescreen
+  .has-text-centered-widescreen
+    text-align: center !important
++fullhd
+  .has-text-centered-fullhd
+    text-align: center !important
 
 .has-text-left
   text-align: left !important
++mobile
+  .has-text-left-mobile
+    text-align: left !important
++tablet
+  .has-text-left-tablet
+    text-align: left !important
++touch
+  .has-text-left-touch
+    text-align: left !important
++desktop
+  .has-text-left-desktop
+    text-align: left !important
++widescreen
+  .has-text-left-widescreen
+    text-align: left !important
++fullhd
+  .has-text-left-fullhd
+    text-align: left !important
 
 .has-text-right
   text-align: right !important
++mobile
+  .has-text-right-mobile
+    text-align: right !important
++tablet
+  .has-text-right-tablet
+    text-align: right !important
++touch
+  .has-text-right-touch
+    text-align: right !important
++desktop
+  .has-text-right-desktop
+    text-align: right !important
++widescreen
+  .has-text-right-widescreen
+    text-align: right !important
++fullhd
+  .has-text-right-fullhd
+    text-align: right !important
 
 @each $name, $pair in $colors
   $color: nth($pair, 1)
