Add border-top, border-bottom and border-radius properties

--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -35,7 +35,12 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
       background-color: $color
       color: $color-invert
   // Modifiers
+  &.is-sticky-top,
+  &.is-sticky-bottom
+    border-radius: 0
   &.is-sticky-top
     +sticky(top, $notification-background-opacity)
+    border-bottom: 1px solid rgba($black, 0.2)
   &.is-sticky-bottom
     +sticky(bottom, $notification-background-opacity)
+    border-top: 1px solid rgba($black, 0.2)
