Fix container docs

--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -51,17 +51,19 @@ doc-subtab: container
     <div class="content">
       <p>The <code>.container</code> class can be used in any context, but mostly as a <strong>direct child</strong> of either:</p>
       <ul>
-        <li><code>.nav</code></li>
+        <li><code>.navbar</code></li>
         <li><code>.hero</code></li>
         <li><code>.section</code></li>
         <li><code>.footer</code></li>
       </ul>
+      <p>
+        The container <strong>breakpoints</strong> have an <strong>offset</strong> defined by the <code>$container-offset</code> variable. It has a default value of <code>60px</code>.
+      </p>
       <p>This is how the container will behave:</p>
       <ul>
-        <li>on <strong>mobile</strong> and <strong>tablet</strong> {% include bp/touch.html %}, it will have a margin of <strong>24px</strong> on each side.</li>
-        <li>on <strong>desktop</strong> {% include bp/desktop.html %}, it will have a maximum width of <strong>960px</strong> and will be <strong>horizontally centered</strong>.</li>
-        <li>on <strong>widescreen</strong> {% include bp/widescreen.html %}, it will have a maximum width of <strong>1152px</strong>.</li>
-        <li>on <strong>fullhd</strong> {% include bp/fullhd.html %}, it will have a maximum width of <strong>1344px</strong>.</li>
+        <li>on <code>$desktop</code> + <code>$container-offset</code> = <code>>= 1068px</code> it will have a maximum width of <strong>960px</strong> and will be <strong>horizontally centered</strong>.</li>
+        <li>on <code>$widescreen</code> + <code>$container-offset</code> = <code>>= 1260px</code> it will have a maximum width of <strong>1152px</strong>.</li>
+        <li>on <code>$fullhd</code> + <code>$container-offset</code> = <code>>= 1452px</code> it will have a maximum width of <strong>1344px</strong>.</li>
       </ul>
       <p>
         The <code>$gap</code> variable has a default value of <code>24px</code> but can be modified.
