--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6258,6 +6258,10 @@ a.navbar-item:hover, a.navbar-item.is-active,
     transition-property: opacity, transform;
     transition-property: opacity, transform, -webkit-transform;
   }
+  .navbar-dropdown.is-right {
+    left: auto;
+    right: 0;
+  }
   .navbar-divider {
     display: block;
   }
