--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -53,6 +53,15 @@
 .has-text-right
   text-align: right !important
 
+.is-capitalized
+  text-transform: capitalize !important
+
+.is-lowercase
+  text-transform: lowercase !important
+
+.is-uppercase
+  text-transform: uppercase !important
+
 @each $name, $pair in $colors
   $color: nth($pair, 1)
   .has-text-#{$name}
