--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -5,26 +5,28 @@ route: blog
 
 {% include blog-hero.html %}
 
-<section class="section is-medium">
+<section class="section">
   <div class="container">
     <div class="columns">
       <div class="column is-offset-2 is-8">
         <div class="article-image is-single is-{{ page.color }}">
           <span class="article-overlay"></span>
           <span class="article-icon">
-            <span class="icon">
-              <i class="fa fa-{{ page.icon }}"></i>
-            </span>
+            <i class="fa fa-{{ page.icon }}"></i>
           </span>
-          <strong class="article-title">
-            {{ page.name }}
+          <strong class="article-info">
+            <span>
+              <time class="article-date" datetime="{{ page.date | date_to_xmlschema }}">
+                {{ page.date | date_to_string }}
+              </time>
+              <strong class="article-title">
+                {{ page.name }}
+              </strong>
+            </span>
           </strong>
         </div>
         <p class="subtitle is-6">
           <a class="article-back" href="{{ site.url }}/blog">Back</a>
-        </p>
-        <p class="subtitle is-4">
-          {{ page.date | date_to_string }}
         </p>
         <h1 class="title is-2">
           {{ page.title }}
