Add list of tags post

--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -61,6 +61,8 @@
       background-color: $color
   &.is-bootstrap
     background-color: $bootstrap
+  &.is-orange
+    background-color: $orange
   &:hover
     .article-overlay
       opacity: 0.25
