--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2310,6 +2310,7 @@ a.box:active {
 }
 
 .content figure {
+  margin: 2em;
   text-align: center;
 }
 
@@ -10267,6 +10268,10 @@ html.route-index #carbon {
 
 .article-image.is-bootstrap {
   background-color: #6f5499;
+}
+
+.article-image.is-orange {
+  background-color: #ff470f;
 }
 
 .article-image:hover .article-overlay {
