--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -46,35 +46,35 @@
 
 $alignments: ('centered': 'center', 'left': 'left', 'right': 'right')
 
-@each $position, $text-align in $alignments
-  .has-text-#{$position}
+@each $alignment, $text-align in $alignments
+  .has-text-#{$alignment}
     text-align: #{$text-align} !important
   +mobile
-    .has-text-#{$position}-mobile
+    .has-text-#{$alignment}-mobile
       text-align: #{$text-align} !important
   +tablet
-    .has-text-#{$position}-tablet
+    .has-text-#{$alignment}-tablet
       text-align: #{$text-align} !important
   +tablet-only
-    .has-text-#{$position}-tablet-only
+    .has-text-#{$alignment}-tablet-only
       text-align: #{$text-align} !important
   +touch
-    .has-text-#{$position}-touch
+    .has-text-#{$alignment}-touch
       text-align: #{$text-align} !important
   +desktop
-    .has-text-#{$position}-desktop
+    .has-text-#{$alignment}-desktop
       text-align: #{$text-align} !important
   +desktop-only
-    .has-text-#{$position}-desktop-only
+    .has-text-#{$alignment}-desktop-only
       text-align: #{$text-align} !important
   +widescreen
-    .has-text-#{$position}-widescreen
+    .has-text-#{$alignment}-widescreen
       text-align: #{$text-align} !important
   +widescreen-only
-    .has-text-#{$position}-widescreen-only
+    .has-text-#{$alignment}-widescreen-only
       text-align: #{$text-align} !important
   +fullhd
-    .has-text-#{$position}-fullhd
+    .has-text-#{$alignment}-fullhd
       text-align: #{$text-align} !important
 
 @each $name, $pair in $colors
