Use border-color instead of +arrow for navbar dropdowns

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -49,7 +49,7 @@ $navbar-divider-background: $border !default
       +desktop
         .navbar-link
           &::after
-            +arrow($color-invert)
+            border-color: $color-invert
         .navbar-dropdown a.navbar-item:not(.is-active):not(:hover),
         .navbar-dropdown .navbar-item:not(a)
           color: $navbar-item
