--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -121,6 +121,8 @@ a.navbar-item,
   margin: 0.5rem 0
 
 +touch
+  .navbar > .container
+    display: block
   .navbar-brand
     .navbar-item
       align-items: center
