Replace occurences of hard coded rounded border-radius with variable radius-rounded

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -66,7 +66,7 @@ $help-size: $size-small !default
   max-width: 100%
   width: 100%
   &[type="search"]
-    border-radius: 290486px
+    border-radius: $radius-rounded
   // Colors
   @each $name, $pair in $colors
     $color: nth($pair, 1)
