Add button modifier is-rounded

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -197,3 +197,5 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default
     color: $button-static-color
     box-shadow: none
     pointer-events: none
+  &.is-rounded
+    border-radius: $radius-rounded
