Add is-rounded support for form fields with has-addons modifier

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -396,12 +396,18 @@ $help-size: $size-small !default
         .select select
           border-bottom-left-radius: $input-radius
           border-top-left-radius: $input-radius
+        .is-rounded
+          border-bottom-left-radius: $radius-rounded
+          border-top-left-radius: $radius-rounded
       &:last-child
         .button,
         .input,
         .select select
           border-bottom-right-radius: $input-radius
           border-top-right-radius: $input-radius
+        .is-rounded
+          border-bottom-right-radius: $radius-rounded
+          border-top-right-radius: $radius-rounded
       .button,
       .input,
       .select select
