Updated tags to be consistent everywhere

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -119,7 +119,7 @@ a.navbar-item,
   height: 1px
   margin: 0.5rem 0
 
-+touch
++mobile
   .navbar-brand
     .navbar-item
       align-items: center
@@ -130,7 +130,7 @@ a.navbar-item,
     &.is-active
       display: block
 
-+desktop
++tablet
   .navbar,
   .navbar-menu,
   .navbar-start,
