--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -67,7 +67,7 @@ route: documentation
   <div class="container">
     <p class="has-text-grey-light">
       This page is <strong class="has-text-grey">open source</strong>.
-      Noticed a typo? Or is something unclear?
+      Noticed a typo? Or something unclear?
       <a class="has-text-grey" href="https://github.com/jgthms/bulma/blob/master/docs/{{ page.path }}" style="border-bottom: 1px solid currentColor;">
         Improve this page on GitHub
       </a>
