--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -52,7 +52,7 @@ doc-subtab: hero
   <div class="container">
     <h3 class="title">Colors</h3>
     <h4 class="subtitle">
-        You can choose one of the <strong>7 available colors</strong>:
+        As with buttons, you can choose one of the <strong>7 different colors</strong>:
     </h4>
   </div>
 </section>
