--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2733,6 +2733,10 @@ a.box:active {
   height: unset;
 }
 
+.textarea.has-fixed-size {
+  resize: none;
+}
+
 .checkbox,
 .radio {
   cursor: pointer;
