A11y: Enhance model docs

--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -53,7 +53,7 @@ variables:
   <div class="modal-content">
     <!-- Any other Bulma elements you want -->
   </div>
-  <button class="modal-close is-large"></button>
+  <button class="modal-close is-large" aria-label="close"></button>
 </div>
 {% endcapture %}
 
@@ -62,10 +62,10 @@ variables:
   <div class="modal-background"></div>
   <div class="modal-content">
     <p class="image is-4by3">
-      <img src="{{site.url}}/images/placeholders/1280x960.png">
+      <img src="{{site.url}}/images/placeholders/1280x960.png" alt="">
     </p>
   </div>
-  <button class="modal-close is-large"></button>
+  <button class="modal-close is-large" aria-label="close"></button>
 </div>
 {% endcapture %}
 
@@ -75,14 +75,14 @@ variables:
   <div class="modal-card">
     <header class="modal-card-head">
       <p class="modal-card-title">Modal title</p>
-      <button class="delete"></button>
+      <button class="delete" aria-label="close"></button>
     </header>
     <section class="modal-card-body">
       <!-- Content ... -->
     </section>
     <footer class="modal-card-foot">
-      <a class="button is-success">Save changes</a>
-      <a class="button">Cancel</a>
+      <button class="button is-success">Save changes</button>
+      <button class="button">Cancel</button>
     </footer>
   </div>
 </div>
