--- a/docs/_sass/love.sass
+++ b/docs/_sass/love.sass
@@ -6,6 +6,9 @@
   display: flex
   justify-content: center
 
+.testimonial-tweet
+  background-color: $white
+
 .more-loves
   align-items: center
   display: flex
