--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -153,10 +153,14 @@
 
     <div class="navbar-end">
       <a class="navbar-item is-hidden-desktop-only" href="{{ site.github }}" target="_blank">
-        GitHub
+        <span class="icon" style="color: #333;">
+          <i class="fa fa-github"></i>
+        </span>
       </a>
       <a class="navbar-item is-hidden-desktop-only" href="{{ site.twitter }}" target="_blank">
-        Twitter
+        <span class="icon" style="color: #55acee;">
+          <i class="fa fa-twitter"></i>
+        </span>
       </a>
       <div class="navbar-item">
         <div class="field is-grouped">
